3-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: shoply
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 367299441871.dkr.ecr.ap-northeast-2.amazonaws.com/app-user:latest
        ports:
        - containerPort: 4005
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: shoply
spec:
  selector:
    app: user-service
  ports:
  - port: 4005
    targetPort: 4005
