4-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: accommodation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: 367299441871.dkr.ecr.ap-northeast-2.amazonaws.com/app-product:latest
        ports:
        - containerPort: 4001
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: accommodation
spec:
  selector:
    app: product-service
  ports:
  - port: 4001
    targetPort: 4001
