5-inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: shoply
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
      - name: inventory-service
        image: 367299441871.dkr.ecr.ap-northeast-2.amazonaws.com/app-inventory:latest
        ports:
        - containerPort: 4002
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: shoply
spec:
  selector:
    app: inventory-service
  ports:
  - port: 4002
    targetPort: 4002
