6-booking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: accommodation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: python:3.11.9-slim
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: accommodation
spec:
  selector:
    app: booking-service
  ports:
  - port: 8000
    targetPort: 8000
