6-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: shoply
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: 367299441871.dkr.ecr.ap-northeast-2.amazonaws.com/app-order:latest
        ports:
        - containerPort: 4003
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: shoply
spec:
  selector:
    app: order-service
  ports:
  - port: 4003
    targetPort: 4003
