7-payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: accommodation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: 367299441871.dkr.ecr.ap-northeast-2.amazonaws.com/app-payment:latest
        ports:
        - containerPort: 4004
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: accommodation
spec:
  selector:
    app: payment-service
  ports:
  - port: 4004
    targetPort: 4004
