8-grafana-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: accommodation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      serviceAccountName: grafana-sa
      containers:
      - name: grafana
        image: grafana/grafana:10.4.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:
        - name: datasource
          mountPath: /etc/grafana/provisioning/datasources
      volumes:
      - name: datasource
        configMap:
          name: grafana-datasource
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: accommodation
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30300
