8-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: accommodation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: python:3.11.9-slim
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: accommodation
spec:
  selector:
    app: notification-service
  ports:
  - port: 8000
    targetPort: 8000
