9-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: accommodation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      nodeSelector:
        role: api
      containers:
      - name: gateway
        image: 367299441871.dkr.ecr.ap-northeast-2.amazonaws.com/app-api:latest
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: accommodation
spec:
  selector:
    app: api-gateway
  ports:
  - port: 4000
    targetPort: 4000
